package main

import (
	"context"
	"fmt"
	"log"
	"net"
	"os"
	"os/signal"
	"syscall"

	"github.com/google/uuid"
	"google.golang.org/grpc"
	"google.golang.org/grpc/reflection"

	paymentv1 "github.com/evgeniyseleznev/bigproj/shared/pkg/proto/payment/v1"
)

const grpcPort = 50052

type paymentService struct {
	paymentv1.UnimplementedPaymentServiceServer
}

func (s *paymentService) PayOrder(ctx context.Context, req *paymentv1.PayOrderRequest) (*paymentv1.PayOrderResponse, error) {
	_ = ctx // context –∏—Å–ø–æ–ª—å–∑—É–µ—Ç—Å—è –¥–ª—è —Å–æ–æ—Ç–≤–µ—Ç—Å—Ç–≤–∏—è –∏–Ω—Ç–µ—Ä—Ñ–µ–π—Å—É gRPC
	_ = req // –ø–∞—Ä–∞–º–µ—Ç—Ä—ã –º–æ–≥—É—Ç –∏—Å–ø–æ–ª—å–∑–æ–≤–∞—Ç—å—Å—è –≤ –±—É–¥—É—â–µ–º (order_uuid, user_uuid, payment_method)

	// –ì–µ–Ω–µ—Ä–∏—Ä—É–µ–º UUID —Ç—Ä–∞–Ω–∑–∞–∫—Ü–∏–∏
	transactionUUID := uuid.New().String()

	// –õ–æ–≥–∏—Ä—É–µ–º –≤ –∫–æ–Ω—Å–æ–ª—å
	log.Printf("–û–ø–ª–∞—Ç–∞ –ø—Ä–æ—à–ª–∞ —É—Å–ø–µ—à–Ω–æ, transaction_uuid: %s", transactionUUID)

	// –í–æ–∑–≤—Ä–∞—â–∞–µ–º transaction_uuid
	return &paymentv1.PayOrderResponse{
		TransactionUuid: transactionUUID,
	}, nil
}

func main() {
	lis, err := net.Listen("tcp", fmt.Sprintf(":%d", grpcPort))
	if err != nil {
		log.Fatalf("failed to listen: %v", err)
	}

	// –°–æ–∑–¥–∞–µ–º gRPC —Å–µ—Ä–≤–µ—Ä
	s := grpc.NewServer()

	// –°–æ–∑–¥–∞–µ–º —Å–µ—Ä–≤–∏—Å
	service := &paymentService{}
	paymentv1.RegisterPaymentServiceServer(s, service)

	// –í–∫–ª—é—á–∞–µ–º —Ä–µ—Ñ–ª–µ–∫—Å–∏—é –¥–ª—è –æ—Ç–ª–∞–¥–∫–∏
	reflection.Register(s)

	go func() {
		log.Printf("üí∞ Payment Service gRPC server listening on port %d", grpcPort)
		if err := s.Serve(lis); err != nil {
			log.Fatalf("failed to serve: %v", err)
		}
	}()

	// Graceful shutdown
	quit := make(chan os.Signal, 1)
	signal.Notify(quit, syscall.SIGINT, syscall.SIGTERM)
	<-quit
	log.Println("üõë Shutting down Payment Service...")
	s.GracefulStop()
	log.Println("‚úÖ Server stopped")
}
